# japokwm

./: .gitignore  .travis.yml  .vimspector.json  DockerFile  LICENSE  Project.toml  README.md  codingStyle.md  config.h.back  config.jl  defaultConfig.jl  install.sh  japokwm.desktop  keys.jl  keysym.jl  main.jl  meson.build  meson_options.txt  now.vim
config/: defaultConfig.lua  init.lua  meson.build  tile.lua  tilehooked.lua  tileutils.lua
config/layouts/: tile.lua
config/layouts/master/: init.lua
config/layouts/monocle/: init.lua  layout.lua
config/layouts/resize_test/: init.lua
config/layouts/spiral/: init.lua
config/layouts/three_columns/: init.lua
config/layouts/tile/: init.lua  layout.lua  leave.lua
config/layouts/tmp/: init.lua  layout.lua
config/layouts/two_pane/: init.lua  layout.lua
protocols/: meson.build
src/: .exrc  .ninja_deps  .ninja_log  2  Gehirn  Project.toml  ]  actions.c  client.c  clipboard.c  color.c  command.c  config.jl  config.lua  container.c  cool.jl  coreUtils.jl  cursor.c  debug  debug.c  defaultConfig.jl  defaultConfig.lua  error_handling.c  event_handler.c  geom  info.c  init.lua  input_manager.c  ipc-json.c  ipc-server.c  japokwm.1  japokwm.5  juliawm  juliawm.jl  keybinding.c  keybinding.jl  keybinding.lua  keyboard.c  keysym.jl  layer_shell.c  (+43 more)
src/bitset/: bitset.c  vector.c
src/command/: commands.c
src/core/: Makefile  client.c  client.h  coreUtils.h  debug.c  global.jl  juliawm.c  keybinding.jl  meson.build  parseConfig.c  parseConfigUtils.c  parseConfigUtils.h  tile.h  tile.jl  tileUtils.c  tileUtils.h  translationLayer.jl
src/core/datastruct/: list.c  vector.c
src/core/include/: actions.h  client.h  coreUtils.h  info.h  ipc-json.h  ipc-server.h  keybinding.h  layout.h  monitor.h  mouse.h  parseConfig.h  parseConfigUtils.h  root.h  server.h  tag.h  tagset.h  wlr-foreign-toplevel-management-unstable-v1-protocol.h  wlr-layer-shell-unstable-v1-protocol.h  xdg-shell-protocol.h
src/core/include/render/: render.h
src/core/include/tile/: tile.h  tileTexture.h  tileUtils.h
src/core/include/utils/: coreUtils.h  gapUtils.h  parseConfigUtils.h  stringUtils.h  writeFile.h
src/core/src/: .exrc  .vimspector.json  actions.c  client.c  coreUtils.c  ipc-json.c  ipc-server.c  juliawm.c  keybinding.c  layout.c  main.c  monitor.c  parseConfig.c  root.c  stringUtils.c  tagset.c  translationLayer.c  wlr-layer-shell-unstable-v1-protocol.c
src/core/src/render/: render.c
src/core/src/tile/: template.jl  tile.c  tileTexture.c  tileUtils.c
src/core/src/utils/: coreUtils.c  gapUtils.c  parseConfigUtils.c  stringUtils.c  template.xml  writeFile.c
src/core/test/: client_test.c  main.c  meson.build  tagset_test.c
src/core/test/tile/: tileTexture.c  tileUtils_test.c
src/deprecated/: config.h  config.jl  juliawm.c  juliawm.jl  tile.jl
src/fg/meson-logs/: meson-log.txt
src/ipc/: ipc-json.c  ipc-server.c  ipc.c  ipc_server_sway_adapter.c
src/kernel/: Makefile  button.jl  client.c  client.h  client.jl  coreUtils.h  dwl.c  hotkeyUtils.jl  juliawm  juliawm.c  keybinding.jl  layout.h  main.jl  myway.jl  parseConfig.c  parseConfig.h  parseConfigUtils.c  parseConfigUtils.h  parseKernel.jl  test.cpp  tile.c  tile.h  tile.jl  tileUtils.c  tileUtils.h
src/kernel/datastruct/: list.h  vector.h
src/kernel/dep/: client.c  juliawm.c  tile.c  tile.h  tileUtils.c  tileUtils.h
src/kernel/wlroots/: wayland-util.c
src/layouts/: layouts.jl
src/layouts/monocle/: 1
src/layouts/test/: 1
src/layouts/tile/: 2  4  5
src/layouts/twoPane/: 1
src/lib/: lib_action.c  lib_actions.c  lib_bitset.c  lib_color.c  lib_container.c  lib_container_list.c  lib_container_property.c  lib_container_property_list.c  lib_cursor.c  lib_cursor_mode.c  lib_direction.c  lib_event_handler.c  lib_focus_set.c  lib_geom.c  lib_geometry.c  lib_gmp.c  lib_info.c  lib_layout.c  lib_list.c  lib_list2D.c  lib_monitor.c  lib_options.c  lib_output.c  lib_output_transform.c  lib_ring_buffer.c  lib_root.c  lib_server.c  lib_tag.c  lib_workspace.c  local_event_handler.c  local_options.c
src/lib/actions/: .exrc  actions.c  lib_actions.c  lib_container.c  libcontainer.c  overlay.c
src/lib/config/: config.c  lib_config.c  local_config.c  localconfig.c
src/lib/event_handler/: lib_event_handler.c  local_event_handler.c
src/lib/info/: info.c  lib_info.c
src/lib/layout/: lib_layout.c
src/lib/monitor/: lib_monitor.c
src/list_sets/: container_stack_set.c  focus_stack_set.c  list_set.c  visual_stack_set.c
src/parser/: README.md
src/parser/wlr/: parseWlr.jl  parseXkb.jl  wayland.h
src/recompile/meson-logs/: meson-log.txt
src/render/: render.c
src/rules/: mon_rule.c  rule.c
src/test/wayland/: Makefile  struct.jl
src/tile/: tile.c  tileTexture.c  tileUtils.c
src/utils/: coreUtils.c  gapUtils.c  parseConfigUtils.c  stringUtils.c  vector.c  writeFile.c
src/wlr/: config.jl  xwayland.jl
src/wlr/backend/: drm.jl  interface.jl  libinput.jl  multi.jl  wayland.jl  x11.jl
src/wlr/interfaces/: wlr_switch.jl  wlr_tablet_pad.jl
src/wlr/types/: wlr_cursor.jl  wlr_data_device.jl  wlr_foreign_toplevel_management_v1.jl  wlr_fullscreen_shell_v1.jl  wlr_gtk_primary_selection.jl  wlr_idle.jl  wlr_idle_inhibit_v1.jl  wlr_input_inhibitor.jl  wlr_keyboard.jl  wlr_keyboard_group.jl  wlr_output_damage.jl  wlr_output_layout.jl  wlr_output_management_v1.jl  wlr_pointer.jl  wlr_pointer_gestures_v1.jl  wlr_presentation_time.jl  wlr_primary_selection.jl  wlr_primary_selection_v1.jl  wlr_relative_pointer_v1.jl  wlr_seat.jl  wlr_server_decoration.jl  wlr_switch.jl  wlr_viewporter.jl  wlr_virtual_keyboard_v1.jl  wlr_xcursor_manager.jl  wlr_xdg_output_v1.jl  wlr_xdg_shell_v6.jl
src/wlr/util/: log.jl
src/wlroots/: Makefile
test/: bitset_test.c  client_test.c  container_test.c  event_handler_test.c  ipc-json_test.c  keybinding_test.c  layout_test.c  meson.build  monitor_test.c  runtests.jl  scratchpad_test.c  stringop_test.c  tag_test.c  tagset_test.c  workspace_test.c
test/tile/: tileUtils_test.c
test/utils/: coreUtils_test.c  gapUtils_test.c  stringUtils_test.c
(+301 files in other folders)
